<resources>
    <string name="chats_conversation_item_photo_description">Contact Photo Image</string>
    <string name="chats_conversation_item_pin_description">Message top pin</string>
    <string name="chats_unable_to_record_audio_warning">Unable to record audio!</string>
    <string name="chats_sending_voice_message_error">Error sending voice messageDetail</string>
    <string name="chats_there_is_no_app_available_to_handle_this_link_on_your_device">There is no app available to handle this link on your device.</string>
    <string name="chats_unknown_file_name">Unknown file</string>
    <string name="chats_item_delete">Delete</string>
    <string name="chats_item_pin">Pin</string>
    <string name="chats_item_cancel_pin">Unpin</string>
    <string name="chats_item_confirm">Confirm</string>
    <string name="chats_item_confirm_delete">Confirm</string>
    <string name="chats_item_confirm_delete_title">Delete Confirm</string>
    <string name="chats_item_confirm_delete_message">Are you sure to delete this conversation?</string>
    <string name="chats_item_set_read">Set Read</string>
    <string name="chats_item_set_unread">Set Unread</string>
    <string name="chats_item_set_mute">Set mute</string>
    <string name="chats_item_set_not_mute">Set not mute</string>
    <string name="chats_message_list_unread_text">%d unread chats</string>
    <string name="chats_item_delete_private_chat_title">Delete the chat with %s and clear the chat history</string>
    <string name="chats_item_delete_private_both">Delete for me and %s</string>
    <string name="chats_item_delete_private_local">Delete just for me</string>
    <string name="chats_title">Chats</string>
    <string name="chats_no_conversation_main">No Chats</string>
    <string name="chats_no_conversation_sub">strike up a chat and it will show up here</string>
    <string name="chats_no_conversation_description">No friends yet? %s and start your private chatting! </string>
    <string name="chats_no_conversation_invite">Invite your friends</string>
    <string name="chats_no_nickname_set">You haven\'t set your nickname yet.</string>
    <string name="chats_no_nickname_set_btn">Set Now</string>
    <string name="chats_network_connecting">Connecting…</string>
    <string name="chats_network_disconnected">Offline</string>
    <string name="chats_main_new_chat">New Chat</string>
    <string name="chats_main_scan_and_add">Scan &amp; Add</string>
    <string name="chats_main_invite_friend">Invite Friends</string>
    <string name="chats_more_data_vault_title">Data Vault</string>
    <string name="chats_more_wallet_title">Wallet</string>
    <string name="chats_more_settings_title">Settings</string>
    <string name="chats_more_airchat_title">AirChat</string>
    <string name="chats_friend_request_title">Friend Requests</string>
    <string name="chats_conversation_input_hint">&#160;Type Here</string>
    <string name="chats_private_lock_description">chat lock</string>
    <string name="chats_private_verified_description">chat verify status</string>
    <string name="chats_private_mute_description">chat mute</string>
    <string name="chats_private_not_contact_text">%1$s is not in your BCM contacts list.</string>
    <string name="chats_private_add_contact_later_button">Later</string>
    <string name="chats_private_add_contact_now_button">Add Now</string>
    <string name="chats_private_lock_notice">This chat is end-to-end encrypted.</string>
    <string name="chats_private_verified_notice">This user\'s Safety Code is verified.</string>
    <string name="chats_private_not_verified_notice">This user\'s safety code is not yet to be verified.</string>
    <string name="chats_private_verified_title_button">Verify</string>
    <string name="chats_private_mute_notice">Mute until %1$s</string>
    <string name="chats_user_edit">Edit</string>
    <string name="chats_user_stick">Pin to the Top</string>
    <string name="chats_user_invite">Invite</string>
    <string name="chats_user_phone_head">Phone</string>
    <string name="chats_user_add">Add</string>
    <string name="chats_user_clear_history">Clear Local Chat History</string>
    <string name="chats_user_delete">Delete Contact</string>
    <string name="chats_user_block">Block User</string>
    <string name="chats_user_unblock">Unblock User</string>
    <string name="chats_user_no_name_text">No Name</string>
    <string name="chats_user_verification_head">Verify Safety Code</string>
    <string name="chats_user_verified_value">Verified</string>
    <string name="chats_user_not_verified_value">Not Verified</string>
    <string name="chats_user_mute_head">Mute</string>
    <string name="chats_user_not_mute_value">Not Muted</string>
    <string name="chats_user_mute_value">Until %1$s</string>
    <string name="chats_user_mute_setted_text">Muted</string>
    <string name="chats_user_mute_canceled_text">Not Muted</string>
    <string name="chats_user_delete_text">Delete Friend</string>
    <string name="chats_user_delete_and_block_text">Delete and Block</string>
    <string name="chats_delete_friend_second_confirm_title">Delete and block %s </string>
    <string name="chats_user_delete_from_contact_text">Delete Contact</string>
    <string name="chats_delete_from_contact_confirm_title">Delete "%s" and the corresponding chat history.</string>
    <string name="chats_user_setting_chat_actions_title">CHAT ACTIONS</string>
    <string name="chats_user_setting_data_title">DATA</string>
    <string name="chats_user_setting_clear_history_title">CLEAR HISTORY</string>
    <string name="chats_user_clear_command_sent">Command Sent</string>
    <string name="chats_user_clearing_notice">Chat History is clearing</string>
    <string name="chats_user_blocking_notice">Chat User is blocking</string>
    <string name="chats_user_clear_success">Chat History is cleared</string>
    <string name="chats_user_block_success">Chat User is Blocked</string>
    <string name="chats_user_unblock_success">Chat User is Unblock</string>
    <string name="chats_user_set_pin_success">Set Pin Success</string>
    <string name="chats_user_set_pin_fail">Set Pin failed</string>
    <string name="chats_user_clear_fail">Chat History failed</string>
    <string name="chats_user_block_fail">Chat User Block failed</string>
    <string name="chats_user_unblock_fail">Chat User Unblock failed</string>
    <string name="chats_user_delete_success">Deleted</string>
    <string name="chats_user_delete_fail">Delete Fail</string>
    <string name="chats_user_add_success">Added</string>
    <string name="chats_user_add_fail">Add Fail</string>
    <string name="chats_user_mute_dialog_title">Mute this user</string>
    <string name="chats_user_mute_dialog_tip">You will not receive notifications during the muted period</string>
    <string name="chats_user_mute_dialog_hour">1 Hour</string>
    <string name="chats_user_mute_dialog_day">1 Day</string>
    <string name="chats_user_mute_dialog_week">1 Week</string>
    <string name="chats_user_mute_dialog_year">1 Year</string>
    <string name="chats_identity_verify_title">Verify Safety Code</string>
    <string name="chats_identity_verify_notice">Verify the end-to-end encryption with %1$s by scanning the QR code or comparing the Safety Number. </string>
    <string name="chats_verify_number_title">Safety Code</string>
    <string name="chats_verify_qr_title">Safety Code</string>
    <string name="chats_verify_mark_btn">Mark as Verified</string>
    <string name="chats_verify_scan_btn">Scan to Verify</string>
    <string name="chats_verify_clear_btn">Clear Verification</string>
    <string name="chats_verify_mark_success">Safety Code marked as Verified</string>
    <string name="chats_verify_scan_success">Safety Code verified</string>
    <string name="chats_verify_scan_fail">Safety Code verify failed</string>
    <string name="chats_verify_mark_cancel">Safety Code mark as Unverified</string>
    <string name="chats_user_verification_dialog_yes_title">%1$s is Verified</string>
    <string name="chats_user_verification_dialog_no_title">%1$s is NOT Verified</string>
    <string name="chats_user_verification_dialog_tip">Verify contact\'s identity by making sure the safety codes on both sides are the same. You can choose either way below.</string>
    <string name="chats_user_verification_dialog_scan">Scan</string>
    <string name="chats_user_verification_dialog_mark">Mark as Verified</string>
    <string name="chats_user_verification_dialog_clear">Clear Verification</string>
    <string name="chats_user_verification_dialog_qr_fail">Get Verification Qr fail</string>
    <string name="chats_user_verification_dialog_mark_fail">Mark Verification fail</string>
    <string name="chats_user_verification_dialog_clear_fail">Clear Verification fail</string>
    <string name="chats_user_verification_dialog_check_success">Identity same</string>
    <string name="chats_user_verification_dialog_check_fail">Identity not same</string>
    <string name="chats_audio_permission_notice_title">Notice</string>
    <string name="chats_audio_permission_notice_content">use audio record need permission</string>
    <string name="chats_audio_permission_setting">setting</string>
    <string name="chats_audio_permission_cancel">cancel</string>
    <string name="chats_resend">Resend</string>
    <string name="chats_cancel">Cancel</string>
    <string name="chats_delete">Delete</string>
    <string name="chats_group_create">Create</string>
    <string name="chats_save">Save</string>
    <string name="chats_forward">Forward</string>
    <string name="chats_select">Select</string>
    <string name="chats_pin">Pin</string>
    <string name="chats_reply">Reply</string>
    <string name="chats_change">Change</string>
    <string name="chats_reply_can_not_locate">Uable to locate the message</string>
    <string name="chats_select_mode_cancel_btn">Cancel</string>
    <string name="chats_select_mode_delete_empty">Please select message</string>
    <string name="chats_create_group_title">Create Group</string>
    <string name="chats_select_contact_title">Select Contacts</string>
    <string name="chats_select_contact_done">Done</string>
    <string name="chats_default_group_name">Group Name</string>
    <string name="chats_group_edit">Edit</string>
    <string name="chats_group_leave_ask">Are you sure to delete and leave this group?</string>
    <string name="chats_group_leave">Leave</string>
    <string name="chats_group_name">Group Name</string>
    <string name="chats_group_short_name" translatable="false">%1$s(%2$d)</string>
    <string name="chats_call_activity_title">Calling</string>
    <string name="chats_group_members">Group Members</string>
    <string name="chats_group_setting_admin_actions_title">ADMIN\'S ACTIONS</string>
    <string name="chats_group_setting_chat_actions_title">CHAT ACTIONS</string>
    <string name="chats_group_setting_footprint_title">FOOTPRINT</string>
    <string name="chats_group_setting_other_title">OTHERS</string>
    <string name="chats_group_setting_notification_head">Mute</string>
    <string name="chats_group_setting_stick_head">Pin to the Top</string>
    <string name="chats_group_setting_leave_head">Delete and Leave</string>
    <string name="chats_forward_recent_chats">Recent Chats</string>
    <string name="chats_forward_select_contacts">Select Contacts</string>
    <string name="chats_forward_select_group">Select Groups</string>
    <string name="chats_media_and_files">Media &amp; Files</string>
    <string name="chats_group_notice">Group Notice</string>
    <string name="chats_group_setting_share_group">Share Group</string>
    <string name="chats_group_setting_joining_request_title">Joining Requests</string>
    <string name="chats_group_setting_joining_approval_title">Approval of Joining</string>
    <string name="chats_group_setting_joining_approval_subtitle">Turn on to manually approve all join-group applications. </string>
</resources>