<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="315dp"
              android:layout_height="wrap_content"
              android:background="@drawable/common_popup_small_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
        android:id="@+id/mute_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:textColor="@color/common_content_primary_color"
        android:textSize="18sp"
        android:text="@string/chats_user_mute_dialog_title"/>

    <TextView
        android:id="@+id/mute_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/common_horizontal_gap"
        android:gravity="center"
        android:textColor="#303030"
        android:textSize="14sp"
        android:text="@string/chats_user_mute_dialog_tip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="@dimen/common_horizontal_gap"
        android:paddingEnd="@dimen/common_horizontal_gap">

        <com.bcm.messenger.common.ui.StateButton
            android:id="@+id/hour_btn"
            style="@style/CommonPrimaryBigTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/chats_user_mute_dialog_hour"/>

        <com.bcm.messenger.common.ui.StateButton
            android:id="@+id/day_btn"
            style="@style/CommonPrimaryBigTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/common_horizontal_gap"
            android:text="@string/chats_user_mute_dialog_day"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingStart="@dimen/common_horizontal_gap"
        android:paddingEnd="@dimen/common_horizontal_gap">

        <com.bcm.messenger.common.ui.StateButton
            android:id="@+id/week_btn"
            style="@style/CommonPrimaryBigTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/chats_user_mute_dialog_week"/>

        <com.bcm.messenger.common.ui.StateButton
            android:id="@+id/year_btn"
            style="@style/CommonPrimaryBigTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/common_horizontal_gap"
            android:text="@string/chats_user_mute_dialog_year"/>

    </LinearLayout>

    <com.bcm.messenger.common.ui.StateButton
        android:id="@+id/mute_cancel"
        style="@style/CommonPrimaryThinBigTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_horizontal_gap"
        android:textAllCaps="false"
        android:text="@string/common_cancel"
        tools:text="Cancel"/>

</LinearLayout>