<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.bcm.messenger.common.ui.CustomDataSearcher
        android:id="@+id/recent_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <com.bcm.messenger.common.ui.CommonSettingItem
        android:id="@+id/recent_contacts"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:setting_item_right="arrow"
        app:setting_item_name="@string/chats_forward_select_contacts"/>

    <com.bcm.messenger.common.ui.CommonSettingItem
        android:id="@+id/recent_groups"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:setting_item_right="arrow"
        app:setting_item_name="@string/chats_forward_select_group"
        app:setting_item_line="false"/>

    <TextView
        android:id="@+id/recent_title"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:background="?attr/common_view_background_grey"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/chats_forward_recent_chats"
        android:textColor="?attr/common_text_secondary_color"
        android:textSize="15sp"/>

</LinearLayout>